--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See http://help.github.com/ignore-files/ for more detail ignoring files.
+# See http://help.github.com/ignore-files/ for more detail-tab ignoring files.
 
 # compiled output
 /dist
